# hackerrank

c++/: CMakeLists.txt  main.cpp
c++/include/: basic_datatypes.h  ifTask.h  io.h
c++/src/: basic_datatypes.cpp  ifTask.cpp  io.cpp
